<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtDev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/developer_credit"
            android:textSize="20sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardImage"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:foregroundGravity="center_horizontal"
            app:cardBackgroundColor="@color/back_color"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/imageprofile" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardImage"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/short_description"
                android:textColor="@color/mute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/desc_profile"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/contact_me"
                android:textColor="@color/mute" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/linkedIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/linked_in"
                    app:backgroundTint="@color/white"
                    app:icon="@drawable/linkedin"
                    app:iconSize="25sp"
                    app:iconTint="@android:color/transparent"
                    app:iconTintMode="add" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/gmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmail"
                    app:backgroundTint="@color/white"
                    app:icon="@drawable/gmail"
                    app:iconSize="25sp"
                    app:iconTint="@android:color/transparent"
                    app:iconTintMode="add" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>