<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="1000dp"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background1" />

    <ImageView
        android:layout_width="227dp"
        android:layout_height="235dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="-100dp"
        android:src="@drawable/circle" />

    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="20dp"
            android:text="@string/titleApp"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/subTitleApp"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"
        android:foregroundGravity="center_vertical"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/mute"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/blue_green"
            android:text="@string/signIn"
            android:textColor="@color/black"
            app:cornerRadius="25dp"
            app:icon="@drawable/signin"
            app:iconGravity="end"
            app:iconSize="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/light_slate_grey"
            android:text="@string/signUp"
            app:cornerRadius="25dp"
            app:icon="@drawable/register"
            app:iconGravity="end"
            app:iconSize="20dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="-101dp"
        android:layout_marginBottom="-101dp"
        android:src="@drawable/circle" />

</RelativeLayout>