<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:text="@string/welcome_to_fit_forever"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/select_plan"
                android:textSize="15sp" />


            <!--      Recommended Plan card      -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/recommend_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/recImage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/image_grad_top" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/image_grad_bottom" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/nameRec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/recDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="39dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/mute"
                        android:enabled="false"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="5dp"
                        app:icon="@drawable/calendar"
                        app:iconSize="20sp"
                        app:iconTint="@color/white" />

                    <TextView
                        android:id="@+id/descRec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/gain_muscle"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/gain_muscle_string"
                android:textColor="@color/mute" />

            <!--      Gain Muscles      -->


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleGain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lose_fat"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lose_fat_desc"
                android:textColor="@color/mute" />

            <!--     Lose Fat       -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleLose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>