<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/edit_your_profile"
        android:textSize="20sp" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="120dp"
                    android:layout_marginTop="40dp"
                    android:foregroundGravity="center_horizontal"
                    app:cardBackgroundColor="@color/back_color"
                    app:cardCornerRadius="250dp">

                    <ImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="140dp"
                        android:layout_height="120dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background1" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/txtChangeProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardImage"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/change_profile_picture"
                    android:textColor="@color/mute" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:backgroundTintMode="src_over"
                android:hint="@string/full_name"
                app:boxBackgroundColor="@color/color_third"
                app:hintTextColor="@color/white"
                app:startIconDrawable="@drawable/profile_vector"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:backgroundTintMode="src_over"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/color_third"
                app:hintTextColor="@color/white"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:backgroundTintMode="src_over"
                android:hint="@string/weight"
                app:boxBackgroundColor="@color/color_third"
                app:hintTextColor="@color/white"
                app:startIconDrawable="@drawable/weight"
                app:startIconTint="@color/white"
                app:suffixText="kg"
                app:suffixTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:backgroundTintMode="src_over"
                android:hint="@string/height"
                app:boxBackgroundColor="@color/color_third"
                app:hintTextColor="@color/white"
                app:startIconDrawable="@drawable/height"
                app:startIconTint="@color/white"
                app:suffixText="cm"
                app:suffixTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/change_your_profile"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>